force-app/main/default/objects/Huddle_Open_Decision__c/Huddle_Open_Decision__c.object-meta.xml
<CustomObject>
    <description>An unresolved question the strategy meeting explicitly left open ("we still need to decide X before the next call"). Tracked as a distinct record with a status so it cannot quietly disappear into the general notes, and so a manager can see everything hanging across the pipeline in one place.</description>
    <label>Huddle Open Decision</label>
    <nameField>
        <displayFormat>DEC-{00000}</displayFormat>
        <label>Open Decision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Huddle Open Decisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>