force-app/main/default/objects/Huddle_Open_Decision__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>What the meeting said around the question: what is blocked by it, and what would settle it.</description>
</CustomField>