force-app/main/default/objects/Huddle_Open_Decision__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <label>Days Open</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <formula>IF(ISPICKVAL(Status__c, "Resolved"), 0, TODAY() - DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>How long this has been hanging. Drives the aging list view and the dashboard rollup of questions nobody has come back to.</description>
</CustomField>