force-app/main/default/objects/Huddle_Open_Decision__c/fields/Needed_By__c.field-meta.xml
<CustomField>
    <fullName>Needed_By__c</fullName>
    <label>Needed By</label>
    <type>Date</type>
    <description>The deadline the meeting attached to the question, when it stated one. Left blank rather than guessed.</description>
</CustomField>