force-app/main/default/objects/Huddle_Open_Decision__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Huddle_Open_Decisions</relationshipName>
    <relationshipLabel>Huddle Open Decisions</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The deal this question is blocking.</description>
</CustomField>