force-app/main/default/objects/Huddle_Open_Decision__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>The unresolved question, in the words the meeting used.</description>
</CustomField>