force-app/main/default/objects/Huddle_Open_Decision__c/fields/Raised_By__c.field-meta.xml
<CustomField>
    <fullName>Raised_By__c</fullName>
    <label>Raised By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Huddle_Open_Decisions_Raised</relationshipName>
    <relationshipLabel>Huddle Open Decisions Raised</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The attendee whose recap surfaced the question.</description>
</CustomField>