force-app/main/default/objects/Huddle_Open_Decision__c/fields/Raised_On__c.field-meta.xml
<CustomField>
    <fullName>Raised_On__c</fullName>
    <label>Raised On</label>
    <type>Date</type>
    <description>The date the meeting raised this question, taken from the strategy log's meeting date. Aging runs from here rather than from CreatedDate, so a huddle written up a week late still shows its open questions as a week old.</description>
</CustomField>