force-app/main/default/objects/Huddle_Open_Decision__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>How the question was finally settled, recorded when Status moves to Resolved.</description>
</CustomField>