force-app/main/default/objects/Huddle_Open_Decision__c/fields/Strategy_Log__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Log__c</fullName>
    <label>Strategy Log</label>
    <type>Lookup</type>
    <referenceTo>Huddle_Strategy_Log__c</referenceTo>
    <relationshipName>Open_Decisions</relationshipName>
    <relationshipLabel>Open Decisions</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The meeting that raised this question, so the surrounding context is one click away.</description>
</CustomField>