force-app/main/default/objects/Huddle_Open_Decision__c/listViews/Aging_Past_7_Days.listView-meta.xml
<ListView>
    <fullName>Aging_Past_7_Days</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Days_Open__c</columns>
    <columns>Needed_By__c</columns>
    <columns>Raised_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Days_Open__c</field>
        <operation>greaterThan</operation>
        <value>7</value>
    </filters>
    <label>Aging Past 7 Days</label>
</ListView>