force-app/main/default/objects/Huddle_Open_Decision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Status__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Days_Open__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Decisions</label>
</ListView>