force-app/main/default/objects/Huddle_Open_Decision__c/listViews/Open.listView-meta.xml
<ListView>
    <fullName>Open</fullName>
    <columns>NAME</columns>
    <columns>Question__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Needed_By__c</columns>
    <columns>Days_Open__c</columns>
    <columns>Raised_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open</label>
</ListView>